<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="109dp"
        android:text="@string/tvAutor"
        app:layout_constraintBottom_toTopOf="@+id/etBaseMaior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/tvRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/etBaseMaior"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/baseMaior"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etBaseMenor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAutor" />

    <EditText
        android:id="@+id/etBaseMenor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/baseMenor"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etAltura"
        app:layout_constraintEnd_toEndOf="@+id/etBaseMaior"
        app:layout_constraintTop_toBottomOf="@+id/etBaseMaior" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintStart_toStartOf="@+id/etBaseMenor"
        app:layout_constraintTop_toBottomOf="@+id/etBaseMenor" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginBottom="46dp"
        android:text="@string/btnCalcular"
        app:layout_constraintBottom_toTopOf="@+id/tvResposta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAltura" />

    <TextView
        android:id="@+id/tvResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="503dp"
        android:layout_marginBottom="209dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>